# autodocsumm

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  python-app.yml
autodocsumm/: __init__.py  _version.py
docs/: apigen.bash  call_demo.py  conf.py  conf_settings.rst  demo_class.rst  demo_exception.rst  demo_grouper.rst  demo_module.rst  dummy.py  dummy2.py  examples.rst  index.rst  inline_autoclasssumm.py  keep_data_demo.py  no_data_demo.py  objects.inv  requirements.txt
docs/api/: autodocsumm.rst
tests/: test_autodocsumm.py
tests/sphinx_supp/: conf.py  dummy.py  empty.py  index.rst  test_autoclasssumm.rst  test_autoclasssumm_inline.rst  test_autoclasssumm_no_titles.rst  test_autoclasssumm_some_sections.rst  test_automodulesumm_nosignatures.rst  test_class.rst  test_class_order.rst  test_class_summary_only.rst  test_inherited.rst  test_module_no_nesting.rst  test_module_summary_only.rst  test_module_title.rst
tests/test-root/: conf.py  dummy.py  dummy_title.py  index.rst  test_autoclasssumm_nosignatures.rst  test_autoexceptionsumm.rst  test_automodulesumm.rst  test_automodulesumm_some_sections.rst  test_class_nosignatures.rst  test_class_submodule.rst  test_class_with_ref_to_other_class.rst  test_empty.rst  test_exception.rst  test_module.rst  test_module_exclude_members.rst  test_module_nosignatures.rst  test_module_submodule.rst
tests/test-root/dummy_submodule/: submodule1.py  submodule2.py
