[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools @ https://github.com/pypa/setuptools/archive/refs/heads/feature/pep660.zip']

[project]
name = 'autodocsumm'
version = '0.2.8'
description = 'Extended sphinx autodoc including automatic autosummaries'
readme = 'README.rst'
keywords = ['sphinx', 'autodoc', 'autosummary', 'content', 'table']
urls.homepage = 'https://github.com/Chilipp/autodocsumm'
authors = [
    { name = 'Philipp S. Sommer', email = 'philipp.sommer@hereon.de' },
]
license = { text = 'Apache-2.0' }

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Documentation',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: OS Independent',
]

requires-python = '>= 3.6'
dependencies = [
    'Sphinx >= 2.2, < 5.0',
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = false
exclude = ['docs', 'tests*', 'examples']

[tool.pytest.ini_options]
addopts = '-v'
